# fileMapping

./: .gitignore  MANIFEST.in  README.md  __init__.py  changelog.md  pyproject.toml
builtInPlugins/Folders/: __init__.py  abnormal.py  config.py  dataFolders.py  helperFunctions.py  temporaryFolders.py
builtInPlugins/ThreadManagement/: __init__.py  config.py  helperFunctions.py
builtInPlugins/fileConfig/: __init__.py  config.py  helperFunctions.py
core/: Class.py  __init__.py  abnormal.py  asynchronous.py  config.py  data.py  decorators.py  fileImport.py  fileMain.py  helperFunctions.py  multiThreadedHelperFunctions.py  multithreading.py  parameterApplication.py  wordProcessing.py
document/: illustrate.md  pluginDevelopment.md
document/core/: ApplyParameter.md  config.md  fileRun.md  multithreading.md  preserveParameters.md
fileMapping/: README.md  changelog.md
fileMapping/update_md/: changelog-0.3.2.md
helperFunctions_expansion/: multithreading.pyi
information/: plugins.md
stubs/: Class.pyi  __init__.pyi  abnormal.pyi  config.pyi  data.pyi  decorators.pyi  fileImport.pyi  fileMain.pyi  helperFunctions.pyi  multiThreadedHelperFunctions.pyi  wordProcessing.pyi
update_md/: changelog-0.3.11.md  changelog-0.3.13.md  changelog-0.3.14.md  changelog-0.3.15.md  changelog-0.3.16.md  changelog-0.3.2.md  changelog-0.3.5.md  changelog-0.3.7.md  changelog-0.3.9.md
