[build-system]
requires = ["setuptools>=42", "wheel"]  # 必要的构建依赖
build-backend = "setuptools.build_meta"


[project]
name = "fileMapping"
# 包名，发布到 PyPI 的名称
version = "0.4.0"
# 版本号
authors = [
  {name = "朝歌夜弦", email = "bop-lp@qq.com"},
]

description = "插件化文件映射库"
readme = "README.md"
license = {file = "LICENSE" }

classifiers = [
  # 必需：Python 版本支持
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",

  # 必需：许可证类型
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # 必需：操作系统支持
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",

]
requires-python = ">=3.8"  # 最低 Python 版本要求

[tool.setuptools.package-data]

fileMapping = ["py.typed"]  # 包含类型存根文件

